ui: (forms-multi-step) Fix button margin alignment

--- a/ui/src/assets/css/forms-multi-step.css
+++ b/ui/src/assets/css/forms-multi-step.css
@@ -22,3 +22,7 @@
     margin-top: 0;
     margin-bottom: 0.5em;
 }
+
+[data-type="button"] .formkit-input, [data-type="submit"] .formkit-input {
+    margin: 0;
+}
